k8s/prod/nx-react/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nx-react-prod
  namespace: prod
spec:
  selector:
    app: nx-react
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
